--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2"
     }
