--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.5.13",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.5.1"
     }
 }
