--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "laravel-vue-pagination": "^4.1.3",
         "vue": "^3.5.13",
         "vue-loader": "^17.4.2",
-        "vue-router": "^4.5.1"
+        "vue-router": "^4.5.1",
+        "vue-sweetalert2": "^5.0.11"
     }
 }
